--- a/src/style.css
+++ b/src/style.css
@@ -43,6 +43,7 @@
   flex-direction: column;
   gap: var(--spacing-8);
   height: 100vh;
+  justify-content: space-between;
 }
 
 section {
@@ -63,7 +64,7 @@ section {
 
 .extra-options {
   margin-block-start: auto;
+  padding-block-end: 1px; /* fix the border bottom issue */
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-20);
 }
